# examples-py-web

./: .editorconfig  .flake8  .gitattributes  .gitignore  .mypy.ini  .pytest.ini  .ruff.toml  README.md  compose.yaml  pyproject.toml
apps/examples-flask-media/: README.md  pyproject.toml
apps/examples-flask-media/src/templates/: index.html
apps/examples-flask-media/tools/: cv2_video_slicer_async.py  udp_echo.py  webcam1.sh
apps/examples-flask-started/: .cspell.json  README.md  pyproject.toml
apps/examples-flask-started/src/blueprints/: __init__.py
apps/examples-flask-started/src/blueprints/app2/: __init__.py
apps/examples-flask-started/src/blueprints/app2/templates/: about-app2.html
apps/examples-flask-started/src/blueprints/app5/: __init__.py
apps/examples-flask-started/src/blueprints/app5/nested1/: __init__.py
apps/examples-flask-started/src/blueprints/templates/: index.html
apps/examples-flask-started/src/flaskr/: __init__.py  schema.sql
apps/examples-flask-started/src/flaskr/templates/: base.html
apps/examples-flask-started/src/quickstart/: _04_routing_url_building.py  _05_static_files.py  _06_rendering_templates.py  _08_redirects_and_errors.py  _09_about_responses.py  _10_sessions.py  _13_hooking_in_wsgi.py  _a1_open_resource_with_utf8.py
apps/examples-flask-started/tests/flaskr_tests/: test_blog.py  test_db.py
apps/examples-google-workspace/: .gitignore  README.md  pyproject.toml
apps/examples-google-workspace/src/examples_google_workspace/auth/: __init__.py  service_account_credentials.py  user_account_credentials.py
apps/examples-google-workspace/src/examples_google_workspace/calendar/: __init__.py  quickstart.py
apps/examples-google-workspace/src/examples_google_workspace/chat/: README.md  __init__.py  quickstart.py
apps/examples-google-workspace/src/examples_google_workspace/docs/: __init__.py
apps/examples-google-workspace/src/examples_google_workspace/drive/: README.md  __init__.py  quickstart.py
apps/examples-google-workspace/src/examples_google_workspace/gmail/: __init__.py  quickstart.py
apps/examples-google-workspace/src/examples_google_workspace/resources/: _logging.py
apps/examples-google-workspace/src/examples_google_workspace/sheets/: __init__.py  gspread_crud.py  quickstart.py
apps/examples-playwright-started/: README.md  pyproject.toml
apps/examples-playwright-started/tests/references/: test_playwright_sync.py
apps/examples-playwright-started/tools/: https_server.py
apps/examples-websockets/: README.md  pyproject.toml
apps/examples-websockets/scripts/: server.py
apps/examples-websockets/scripts/quickstart/: client.py
src/examples-flask-media/: .cspell.json  README.md  app.py  mypy.ini  pyproject.toml
src/examples-flask-media/examples/livecv/: README.md  __init__.py  __route__.py  live_camera.py  video_camera.py
src/examples-flask-media/examples/livestreaming/: __init__.py  __route__.py
src/examples-flask-media/examples/videochunks/: __route__.py  utility.py
src/examples-flask-media/src/: app.py
src/examples-flask-media/src/examples/video/chunks/: README.md  __route__.py  utility.py
src/examples-flask-media/src/examples/webcam/hls/: README.md
src/examples-flask-media/src/examples/webcam/mjpeg/: README.md  __route__.py  video_camera.py
src/examples-flask-media/src/templates/: index.html
src/examples-flask-media/templates/: index.html
src/examples-flask-media/templates/livecv/: index.html
src/examples-flask-media/templates/livestreaming/: index.html
src/examples-flask-media/templates/videochunks/: index.html
src/examples-flask-media/tools/: camera.sh  cv2_imshow.py  cv2_mp4_to_webm.py  cv2_video_slicer.py  cv2_video_slicer_async.py  hls.sh  udp_echo.py  webcam2_hls.sh
src/examples-flask-started/: .cspell.json  README.md  pyproject.toml
src/examples-flask-started/src/blueprints/app2/static/: style-app2.css
src/examples-flask-started/src/blueprints/templates/: about.html
src/examples-flask-started/src/blueprints/templates/app2/: hello.html
src/examples-flask-started/src/flaskr/: __init__.py  auth.py  blog.py  db.py
src/examples-flask-started/src/flaskr/static/: style.css
src/examples-flask-started/src/quickstart/: _01_hello.py  _02_html_escaping.py  _03_routing.py  _04_routing_url_building.py  _05_static_files.py  _06_rendering_templates.py  _07_accessing_request_data.py  _08_redirects_and_errors.py  _09_about_responses.py  _10_sessions.py  _12_logging.py  _13_hooking_in_wsgi.py  _a1_open_resource_with_utf8.py
src/examples-flask-started/tests/flaskr/: test_db.py
src/examples-flask-started/tests/flaskr_tests/: conftest.py  test_auth.py
src/examples-google-workspace/: .cspell.json  .gitignore  README.md  pyproject.toml
src/examples-google-workspace/src/examples_google_workspace/: __main__.py
src/examples-google-workspace/src/examples_google_workspace/auth/: README.md  __init__.py  account_types.py  user_account_credentials.py
src/examples-google-workspace/src/examples_google_workspace/calendar/: README.md  quickstart.py
src/examples-google-workspace/src/examples_google_workspace/chat/: README.md  quickstart.py
src/examples-google-workspace/src/examples_google_workspace/console/: arguments.py  command.py
src/examples-google-workspace/src/examples_google_workspace/docs/: README.md  __init__.py  quickstart.py
src/examples-google-workspace/src/examples_google_workspace/drive/: README.md  __init__.py  list.py  quickstart.py
src/examples-google-workspace/src/examples_google_workspace/gmail/: README.md  quickstart.py
src/examples-google-workspace/src/examples_google_workspace/resources/: __init__.py
src/examples-google-workspace/src/examples_google_workspace/sheets/: README.md  __init__.py  gspread_crud.py  quickstart.py  simple_curd.py
src/examples-playwright-started/: README.md  pyproject.toml
src/examples-playwright-started/tests/getting_started/: test_01_example.py  test_03_using_fixtures.py  test_xx_ignore_https_errors.py
src/examples-playwright-started/tests/references/: test_tracing.py
src/examples-playwright-started/tools/: https_server.py
(+46 files in other folders)
