[project]
authors = [{ name = "A.suzuki", email = "suzu.devworks@gmail.com" }]
dependencies = []
description = "Default template for PDM package"
license = { text = "MIT" }
name = "examples-py-web"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.1.0"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "black>=25.11.0",
    "isort>=7.0.0",
    "pytest-cov>=7.0.0",
    "pyclean>=3.4.0",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
src_paths = ["packages/"]
known_first_party = ["examples", "flaskr"]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/packages/examples-flask-quickstart#egg=examples-flask-quickstart",
    "-e file:///${PROJECT_ROOT}/packages/examples-flask-blueprint#egg=examples-flask-blueprint",
    "-e file:///${PROJECT_ROOT}/packages/examples-flask-tutorial#egg=examples-flask-tutorial",
    "-e file:///${PROJECT_ROOT}/packages/examples-flask-media#egg=examples-flask-media",
]

[tool.pdm.scripts]
clean = "pyclean ."
clean_all_dirs_ = { shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$)\" | xargs rm -rf" }
format = { composite = ["isort .", "black ."] }
lint = { composite = ["flake8", "mypy ."] }
