[project]
authors = [{ name = "A.suzuki", email = "suzu.devworks@gmail.com" }]
dependencies = []
description = "Default template for PDM package"
license = { text = "MIT" }
name = "examples-py-web"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pyclean>=3.4.0",
]


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/packages/examples-flask#egg=examples-flask",
    "-e file:///${PROJECT_ROOT}/packages/examples-web#egg=examples-web",
]

[tool.pdm.scripts]
_clean_dirs = { shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$)\" | xargs rm -rf" }
clean = "pyclean ."
format = { composite = ["black .", "isort ."] }
lint = { composite = ["flake8", "mypy ."] }


[tool.black]
line-length = 119

[tool.isort]
profile = "black"
src_paths = ["packages/"]
