[project]
name = "examples-flask-media"
description = "Add your description here"
authors = [
    { name = "A.suzuki", email = "suzu.devworks@gmail.com" },
]
dependencies = [
    "flask>=3.0.3",
    "opencv-python>=4.10.0.84",
    "flask-cors>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "types-flask-cors>=5.0.0.20240902",
]

[tool.rye.scripts]
dev = "flask --app src/app run --debug"

[tool.hatch.version]
path = "src/examples_flask_media/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_flask_media"]

[tool.pytest.ini_options]
addopts = "--durations=0 --cov-branch --cov-report xml:.cov/coverage.xml --cov=src/"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/"]
