[project]
name = "examples-playwright-started"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "A.suzuki", email = "suzu.devworks@gmail.com" },
]
dependencies = [
    "playwright>=1.47.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-playwright>=0.5.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_playwright_started"]

[tool.pytest.ini_options]
addopts = "--durations=0 --cov-branch --cov-report xml:.cov/coverage.xml --cov=src/ -m \"not use_other_env\""
testpaths = ["tests"]
markers = ["use_other_env"]

[tool.coverage.run]
branch = true
source = ["src/"]
