[project]
name = "examples-websockets"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "A.suzuki", email = "suzu.devworks@gmail.com" },
]
dependencies = [
    "websockets>=13.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python -m http.server 8000"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_websockets"]
