[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = [
  "flask>=2.3.2",
  "flask-cors>=4.0.0",
  "opencv-python>=4.7.0.72",
]
description = ""
dynamic = ["version"]
license = {text = "MIT"}
name = "examples-flask-media"
readme = "README.md"
requires-python = ">=3.11"

[tool.pdm]
version = {source = "file", path = "examples/__version__.py"}

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=6.0.0",
  "mypy>=1.3.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "pytest-cov>=4.1.0",
  "pyclean>=2.7.3",
  "types-flask-cors>=4.0.0.0",
]

[tool.pdm.scripts]
clean = {composite = ["pyclean .", "clean_dirs"]}
clean_dirs = {shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$|\\..+_cache$)\" | xargs rm -rf"}
dev = "flask run --debug"
format = {composite = ["isort .", "black ."]}
lint = {composite = ["flake8", "mypy ."]}
test = "pytest --cov=. --cov-branch --cov-report xml"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.coverage.run]
branch = true
source = [""]
