[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = [
  "pyyaml>=6.0.2",
  "google-api-python-client>=2.140.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "google-apps-chat>=0.1.9",
  "gspread>=6.1.2",
]
description = "Default template for PDM package"
dynamic = ["version"]
license = {text = "MIT"}
name = "examples-google-workspace"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
examples-google-cli = "examples_google_workspace.console.command:main"

[tool.pdm]
distribution = true
version = {source = "file", path = "src/examples_google_workspace/__init__.py"}

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=7.1.0",
  "mypy>=1.10.1",
  "black>=24.4.2",
  "isort>=5.13.2",
  "pytest-cov>=5.0.0",
  "pyclean>=3.0.0",
  "types-PyYAML>=6.0.12.20240311",
]

[tool.pdm.build]
source-includes = ["**/*.md", "tests/"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
src_paths = ["src/", "tests/"]

[tool.mypy]
files = ["src/", "tests/"]
#
allow_redefinition = true
local_partial_types = true
python_version = 3.12
strict = true
strict_optional = true
warn_unreachable = true
#
pretty = true
show_error_context = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['google_auth_oauthlib.*', 'googleapiclient.*']

[tool.pdm.scripts]
_clean_dirs = {shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$|\\.mypy_cache$)\" | xargs rm -rf"}
clean = {composite = ["pyclean .", "_clean_dirs"]}
dev = "flask --app src/app run --debug"
format = {composite = ["isort .", "black ."]}
lint = {composite = ["flake8", "mypy"]}
test = "pytest --durations=0 --cov-branch --cov-report xml:.cov/coverage.xml --cov=src/ tests/"
